--- a/style.css
+++ b/style.css
@@ -1,6 +1,39 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 50px;
 }
 .orange-color{
     color: orange;
+}
+section{
+    display: flex;
+    margin-bottom: 150px;
+}
+.half-width{
+    width: 60%;
+    padding-left: 14%;
+}
+.half-width img{
+    width: 500px;
+    height: 600px;
+    padding-left: 5%;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    padding: 12px 40px;
+    color: white;
+    font-weight: 500;
+    border-radius: 15px;
+}
+.ground-banner{
+    background-image: url(kudukudu.png);
+    background-repeat: no-repeat;
+    width: 100%;
 }
