--- a/style.css
+++ b/style.css
@@ -8,16 +8,23 @@ h1{
 h2{
     font-size: 50px;
 }
+h3{
+    font-weight: 700;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 60%;
-    padding-left: 14%;
+    padding-left: 15px;
+    padding-right: 5px;
+    margin-right: 5px; 
+    margin-left: 5px;
+
 }
 .half-width img{
     width: 500px;
@@ -35,5 +42,34 @@ section{
 .ground-banner{
     background-image: url(kudukudu.png);
     background-repeat: no-repeat;
-    width: 100%;
+    background-position-x: right;
+    background-position: left;
+}
+.high-center{
+    text-align: center;
+}
+.recipie-title{
+    width: 50%;
+    margin-left: 4%;
+    margin-right: 4%;
+    padding-left: 50px;
+    border-radius: 5px;
+    box-shadow: 4px 4px 30px gray;
+}
+.my-fun{
+    width: 50%;
+    margin-left: 4%;
+    margin-right: 4%;
+    padding-left: 50px;
+    font-weight: 700px;
+    padding-left: 5%;
+    padding-right: 5s%;
+}
+.followers{
+    border-radius: 10;
+    box-shadow: 5px 5px 30px grey;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
