--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h3{
     padding-left: 50px;
     font-weight: 700px;
     padding-left: 5%;
-    padding-right: 5s%;
+    padding-right: 5%;
 }
 .followers{
     border-radius: 10;
@@ -72,4 +72,13 @@ h3{
     margin-right: 5%;
     margin-top: 2%;
     margin-bottom: 2%;
+}
+.last-line{
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding-top: 1px;
+    padding-bottom: 10%;
+.gray-color{
+    color: gray;
 }
